--- a/docs/算法/回溯.md
+++ b/docs/算法/回溯.md
@@ -27,6 +27,44 @@
 
 >回溯问题主要分为子集、排列、组合问题
 
+[回溯算法入门级详解 + 练习（持续更新） - 全排列 - 力扣（LeetCode）](https://leetcode.cn/problems/permutations/solution/hui-su-suan-fa-python-dai-ma-java-dai-ma-by-liweiw/)
+
+#### [22. 括号生成](https://leetcode.cn/problems/generate-parentheses/)
+
+>数字 `n` 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 **有效的** 括号组合。
+
+```java
+//回溯模板
+//left right
+class Solution {
+    List<String> res = new ArrayList<>();
+    StringBuilder tmp = new StringBuilder();
+    public List<String> generateParenthesis(int n) {
+        int left=n, right = n;
+        backTracking(left, right, tmp);
+        return res;
+    }
+
+    public void backTracking(int left, int right, StringBuilder tmp){
+        //剪枝，不满足的话直接回退
+        if(left<0 || right <0 || left>right) return;
+        //满足条件
+        if(left == 0 && right == 0){
+            res.add(tmp.toString());
+            return;
+        }
+        //优先添加左括号，往里递归，之后撤销
+        tmp.append("(");
+        backTracking(left-1, right, tmp);
+        tmp.deleteCharAt(tmp.length()-1);
+        //添加右括号，递归，之后撤销
+        tmp.append(")");
+        backTracking(left, right-1, tmp);
+        tmp.deleteCharAt(tmp.length()-1);
+    }
+}
+```
+
 
 
 ### 子集
