--- a/docs/算法/基础技巧.md
+++ b/docs/算法/基础技巧.md
@@ -4,9 +4,151 @@
 
 ## 双指针
 
+|                                                              |      |
+| ------------------------------------------------------------ | ---- |
+| [15. 三数之和](https://leetcode.cn/problems/3sum/)<br />[1. 两数之和](https://leetcode.cn/problems/two-sum/)<br />[167. 两数之和 II - 输入有序数组](https://leetcode.cn/problems/two-sum-ii-input-array-is-sorted/) |      |
+|                                                              |      |
+|                                                              |      |
+
+
+
+#### [15. 三数之和](https://leetcode.cn/problems/3sum/)
+
+>给你一个整数数组 nums ，判断是否存在三元组 [nums[i], nums[j], nums[k]] 满足 i != j、i != k 且 j != k ，同时还满足 nums[i] + nums[j] + nums[k] == 0 。请
+>
+>你返回所有和为 0 且不重复的三元组。
+>
+>注意：答案中不可以包含重复的三元组。
+>
+
+>**Follow UP**
+>
+>两数之和如果数组中含有重复元素呢？HashMap的value存储元素出现次数：要求返回索引的话value改成存储数组？
+>
+>然后三数之和去重呢？
+
+```c++
+//先排序然后双指针
+//关键是去重
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        Arrays.sort(nums);
+        List<List<Integer> > res = new ArrayList<>();
+        //最外层循环，固定的那个数
+        for(int i=0;i<nums.length-2;i++){
+            //简单优化
+            if(nums[i]>0) break;
+            //第一步去重 (注意写法往前看 )
+            if(i>0 && nums[i] == nums[i-1]) continue;
+            //设置双指针
+            int left = i+1, right = nums.length-1;
+            //双指针模板
+            while(left<right){
+                int sum = nums[i] + nums[left] + nums[right];
+                if(sum < 0){
+                    //(更新左指针) 左指针方向去重
+                    while(left<right && nums[left]==nums[++left]);
+                }else if(sum > 0){
+                    //(更新右指针) 右指针方向去重
+                    while(left<right && nums[right]==nums[--right]);
+                }else{
+                    //加入数组，更新左右指针并去重处理
+                    res.add(new ArrayList<Integer>(Arrays.asList(nums[i], nums[left], nums[right]) ) );
+                    while(left<right && nums[left]==nums[++left]);
+                    while(left<right && nums[right]==nums[--right]);
+                }
+            }
+        }
+        return res;
+    }
+}
+```
+
 
 
 ## 滑动窗口
+
+|                                                              |      |
+| ------------------------------------------------------------ | ---- |
+| [ 42. 接雨水（困难）](https://leetcode-cn.com/problems/trapping-rain-water/) |      |
+| [84. 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/) |      |
+| [ 316. 去除重复字母（困难）](https://leetcode-cn.com/problems/remove-duplicate-letters/) |      |
+| [ 402. 移掉K位数字](https://leetcode-cn.com/problems/remove-k-digits/) |      |
+| [503. 下一个更大元素 II](https://leetcode.cn/problems/next-greater-element-ii/) |      |
+| [581. 最短无序连续子数组](https://leetcode-cn.com/problems/shortest-unsorted-continuous-subarray/) |      |
+| [ 739. 每日温度（中等）](https://leetcode-cn.com/problems/daily-temperatures/) |      |
+|                                                              |      |
+
+
+
+#### [84. 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
+
+>给定 *n* 个非负整数，用来表示柱状图中各个柱子的高度。每个柱子彼此相邻，且宽度为 1 。
+>
+>求在该柱状图中，能够勾勒出来的矩形的最大面积。
+
+```java
+//使用哨兵法，可以普适化，代码更简洁。
+//2哨兵或1哨兵或不用哨兵
+
+//维护一个单调栈，使得栈是单调递增（非严格）的 
+//situation1：
+class Solution {
+    public int largestRectangleArea(int[] heights) {
+        int len = heights.length;
+        int[] newHeights = new int[len+2];
+        //左哨兵防止出现栈为空情况，这时候width其实就是i
+        newHeights[0] = 0;
+        //右哨兵确保栈中元素能全部出栈
+        newHeights[len+1] = 0;
+        for(int i=1;i<=len;i++){
+            newHeights[i] = heights[i-1];
+        }
+        //stack存索引，方便计算宽度
+        Stack<Integer> st = new Stack<>();
+        st.push(0);
+        int res = 0;
+        for(int i=1;i<len+2;++i){
+            //如果当前的数小于栈顶（循环执行直到大于），则计算以栈顶处元素为高度的长方形面积
+            //因为栈是单增的，所以长方形的左边起始点就是栈顶处索引
+            //右边就是当前遍历到的数的索引
+            while(newHeights[i]<newHeights[st.peek()]){
+                int height = newHeights[st.pop()];
+                //因为已经pop了，所以要再-1
+                int width = i-st.peek()-1;
+                res = Math.max(res, height*width);
+            }
+            st.push(i);
+        }
+        return res;
+    }
+}
+
+//不加哨兵的方法
+class Solution {
+    public int largestRectangleArea(int[] heights) {
+        //不加哨兵
+        int len = heights.length;
+        int res = 0;
+        Stack<Integer> st = new Stack<>();
+        for(int i=0;i<=len;i++){
+            //情形1属于栈未清空则额外加一个i=len时循环计算 
+            //情形2属于正常情形出栈计算，且因为没有首哨兵，故要判断栈是否为空
+            while( (!st.isEmpty() && i==len) || (!st.isEmpty() && heights[i]<heights[st.peek()] ) ){
+                int hi = heights[st.peek()];
+                st.pop();
+                //根据栈是否为空判断宽度
+                int width = st.isEmpty()?i:i-st.peek()-1;
+                res = Math.max(res, hi*width);
+            }
+            st.push(i);
+        }
+        return res;
+    }
+}
+
+
+```
 
 
 
@@ -26,5 +168,11 @@
 
 
 
+## 哈希
 
+|                                                              |      |
+| ------------------------------------------------------------ | ---- |
+| [41. 缺失的第一个正数](https://leetcode.cn/problems/first-missing-positive/) |      |
+| [287. 寻找重复数](https://leetcode.cn/problems/find-the-duplicate-number/) |      |
+|                                                              |      |
 
