--- a/docs/算法/大纲.md
+++ b/docs/算法/大纲.md
@@ -1,1 +1,3 @@
 ![图片](https://pictures.xiaxuyang.com/img/640)
+
+宫水三叶 [Home · SharingSource/LogicStack-LeetCode Wiki (github.com)](https://github.com/SharingSource/LogicStack-LeetCode/wiki)
