--- a/docs/算法/动态规划.md
+++ b/docs/算法/动态规划.md
@@ -36,6 +36,7 @@
 | [72. 编辑距离](https://leetcode-cn.com/problems/edit-distance/) |    🧡 && 💥     |  Ⅰ   |    1     |              |          |          |
 | [221. 最大正方形](https://leetcode-cn.com/problems/maximal-square/) |               |      |          |              |          |          |
 | [剑指 Offer 47. 礼物的最大价值](https://leetcode-cn.com/problems/li-wu-de-zui-da-jie-zhi-lcof/) |    💚 && 💌     |      |          |              |          |          |
+| [887. 鸡蛋掉落](https://leetcode.cn/problems/super-egg-drop/) |               |      |          |              |          |          |
 
 
 
